tests/snapshots/run_wpt_conformance__coreml_lesser_float32_0D_scalar.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
lesser.https.any.js lesser float32 0D scalar, coreml
 lesser :: lesser float32 0D scalar: index 0: actual=0 expected=1 tolerance=0
  inputs: inputA: [-0.5228080153465271]; inputB: [0.8150388598442078]
  expected output: [1]
  actual output: [0]

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: f32[];
    inputB: f32[];
  }

  nodes {
    [output] = lesser(inputA, inputB, label="");
  }

  outputs { output; }
}
