tests/snapshots/run_wpt_conformance__coreml_lesser_float32_1D_constant_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
lesser.https.any.js lesser float32 1D constant tensors, coreml
 lesser :: lesser float32 1D constant tensors: index 0: actual=0 expected=1 tolerance=0
  inputs: inputA: [-1.147218942642212, -8.409374237060547, -2.2753310203552246, -0.5770801305770874, 8.171789169311523, -0.907120943069458, 5.2908453941345215, -3.9134645462036137, 9.825095176696776, -8.931730270385742, -3.457401752471924, -7.331232070922852, 1.232004165649414, 4.312077045440674, 1.2715545892715454, 4.184540748596191, -6.710920333862305, 3.0768423080444336, 1.0030865669250488, -9.076244354248049, 8.907161712646484, 4.232614994049072, 2.1005890369415283, -6.201345443725586] (constant); inputB: [2.945375680923462, 3.730471611022949, 4.0253753662109375, -4.718355178833008, 6.7732744216918945, -2.042813539505005, -6.526762008666992, 6.826299667358398, -9.267172813415527, 6.118423938751221, -2.001732349395752, 1.779831051826477, 9.660094261169434, -2.7473158836364746, -3.4345006942749023, -4.751097679138184, -6.092621803283691, -0.4334806203842163, -1.4069052934646606, -0.237420991063118, -9.10597038269043, 6.811779975891113, -6.768326759338379, -8.952353477478027] (constant)
  expected output: [1, 1, 1, 0, 0, 0, 0, 1, 0, 1 ...] (len=24)
  actual output: [0, 0, 128, 63, 0, 0, 128, 63, 0, 0 ...] (len=24)
  expected output full nd:
[1, 1, 1, 0, 0, 0, 0, 1, 0, 1, ...] (len=24, shape=[24])
  actual output full nd:
[0, 0, 128, 63, 0, 0, 128, 63, 0, 0, ...] (len=24, shape=[24])

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f32[24] @bytes([18, 216, 146, 191, 204, 140, 6, 193, 6, 159, 17, 192, 134, 187, 19, 191, 166, 191, 2, 65, 20, 57, 104, 191, 155, 78, 169, 64, 52, 118, 122, 192, 151, 51, 29, 65, 94, 232, 14, 193, 18, 70, 93, 192, 116, 153, 234, 192, 80, 178, 157, 63, 137, 252, 137, 64, 77, 194, 162, 63, 194, 231, 133, 64, 220, 191, 214, 192, 252, 234, 68, 64, 36, 101, 128, 63, 76, 56, 17, 193, 188, 131, 14, 65, 149, 113, 135, 64, 13, 112, 6, 64, 108, 113, 198, 192]);
    operand_1: f32[24] @bytes([9, 129, 60, 64, 12, 192, 110, 64, 224, 207, 128, 64, 196, 252, 150, 192, 170, 190, 216, 64, 117, 189, 2, 192, 60, 219, 208, 192, 12, 113, 218, 64, 87, 70, 20, 193, 33, 202, 195, 64, 98, 28, 0, 192, 129, 209, 227, 63, 191, 143, 26, 65, 6, 212, 47, 192, 220, 206, 91, 192, 254, 8, 152, 192, 194, 246, 194, 192, 44, 241, 221, 190, 121, 21, 180, 191, 125, 30, 115, 190, 14, 178, 17, 193, 26, 250, 217, 64, 34, 150, 216, 192, 215, 60, 15, 193]);
  }

  nodes {
    [output] = lesser(operand_0, operand_1, label="");
  }

  outputs { output; }
}
